--- a/style.css
+++ b/style.css
@@ -501,7 +501,7 @@ main .carousel-slide img {
     z-index: 999;
   }
   main .carousel-slide a {
-    width: 100px;
+    width: 130px;
     font-size: 0.6rem;
     position: absolute;
     top: 75%;
@@ -1272,15 +1272,20 @@ main .carousel-slide img {
 }
 #footer .footer__content .footer__logo .icons {
   display: flex;
+  align-items: center;
+}
+#footer .footer__content .footer__logo .icons a {
+  color: #d1ac30;
+  text-decoration: none;
+}
+#footer .footer__content .footer__logo .icons a:hover {
+  color: #fff;
 }
 #footer .footer__content .footer__logo .icons a i {
   font-size: 1.5rem;
   margin: 0 10px;
-  color: #fff;
+  color: #d1ac30;
   transition: 0.5s;
-}
-#footer .footer__content .footer__logo .icons a i:hover {
-  color: #fff;
 }
 #footer .footer__content .footer__itens {
   display: flex;
@@ -1354,14 +1359,22 @@ main .carousel-slide img {
     font-weight: 400;
     color: #fff;
   }
-  #footer .footer__content .footer__logo a i {
+  #footer .footer__content .footer__logo .icons {
+    display: flex;
+    align-items: center;
+  }
+  #footer .footer__content .footer__logo .icons a {
+    color: #d1ac30;
+    text-decoration: none;
+  }
+  #footer .footer__content .footer__logo .icons a:hover {
+    color: #fff;
+  }
+  #footer .footer__content .footer__logo .icons a i {
     font-size: 1.5rem;
     margin: 0 10px;
-    color: #fff;
+    color: #d1ac30;
     transition: 0.5s;
-  }
-  #footer .footer__content .footer__logo a i:hover {
-    color: #fff;
   }
   #footer .footer__content .footer__itens {
     display: flex;
@@ -1415,7 +1428,7 @@ main .carousel-slide img {
   width: 40%;
 }
 .first__section-sobrenos .first__section-content {
-  width: 50%;
+  padding: 0 20px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -1434,8 +1447,10 @@ main .carousel-slide img {
 
 .second__section {
   display: flex;
-  padding: 0;
+  flex-wrap: wrap;
+  padding: 0 20px;
   margin: 100px auto;
+  gap: 40px;
 }
 .second__section .second-content {
   display: flex;
@@ -1458,21 +1473,18 @@ main .carousel-slide img {
     max-width: 1200px;
     margin: 50px auto;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
   }
   .first__section-sobrenos #first__section-img {
     width: 70%;
-    border-radius: 50%;
   }
   .first__section-sobrenos-content {
-    margin: 0 auto;
-    padding: 50px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 100px;
   }
   .first__section-sobrenos-content h1 {
     font-size: 2rem;
@@ -1686,8 +1698,7 @@ main .carousel-slide img {
     margin: 50px auto;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(to right, #68a911, #84D916, #A5DF59);
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background: url(assets/gold.jpg);
     padding: 40px;
     border-radius: 20px;
     gap: 20px;
