--- a/_simulacao.scss
+++ b/_simulacao.scss
@@ -119,8 +119,7 @@
             margin: 50px auto;
             display: flex;
             flex-direction: column;
-            background: linear-gradient(to right, #68a911, #84D916, #A5DF59);
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            background: url(assets/gold.jpg);
             padding: 40px;
             border-radius: 20px;
             gap: 20px;
