--- a/_sobreNos.scss
+++ b/_sobreNos.scss
@@ -11,7 +11,7 @@
     }
 
     .first__section-content {
-        width: 50%;
+        padding: 0 20px;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -31,8 +31,10 @@
 
 .second__section {
     display: flex;
-    padding: 0;
+    flex-wrap: wrap;
+    padding: 0 20px;
     margin: 100px auto;
+    gap: 40px;
 
     .second-content {
         display: flex;
@@ -58,22 +60,19 @@
         max-width: 1200px;
         margin: 50px auto;
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column;
         align-items: center;
         justify-content: space-between;
 
         #first__section-img {
             width: 70%;
-            border-radius: 50%;
         }
 
         &-content {
-            margin: 0 auto;
-            padding: 50px;
             width: 100%;
             display: flex;
             flex-direction: column;
-            gap: 40px;
+            gap: 100px;
 
             h1 {
                 font-size: 2rem;
