--- a/_servicos.scss
+++ b/_servicos.scss
@@ -47,11 +47,12 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+        gap: 30px;
 
         .servico {
             margin: 10px;
             padding: 20px;
-            width: 165px;
+            width: 300px;
             height: 300px;
             display: flex;
             justify-content: center;
@@ -64,19 +65,15 @@
             transition: .5s;
             cursor: pointer;
 
-            img {
-                width: 40px;
-                height: 40px;
-            }
 
             h2 {
-                font-size: 1rem;
+                font-size: 1.5rem;
                 color: $cor-primaria;
                 text-align: center;
             }
 
             p {
-                font-size: .7rem;
+                font-size: 1rem;
                 color: $cor-cinza;
                 text-align: center;
             }
