--- a/_fourthSection.scss
+++ b/_fourthSection.scss
@@ -3,6 +3,7 @@
     margin: 50px auto;
     padding: 50px 50px;
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
 
@@ -16,6 +17,7 @@
             font-size: 2rem;
             color: $cor-secundaria;
             font-weight: 800;
+            text-align: center;
         }
 
         &-itens {
@@ -58,7 +60,7 @@
     }
 
     &-image {
-        width: 50%;
+        width: 40%;
     }
 }
 
@@ -84,11 +86,14 @@
                 font-size: 2rem;
                 color: $cor-secundaria;
                 font-weight: 800;
+                text-align: center;
             }
 
             &-itens {
                 display: flex;
                 align-items: center;
+                flex-direction: column;
+                gap: 20px;
 
                 i {
                     padding: 20px;
@@ -110,13 +115,16 @@
                     display: flex;
                     flex-direction: column;
                     gap: 10px;
+                    align-items: center;
 
                     h3 {
+                        text-align: center;
                         color: $cor-secundaria;
                         font-size: 1.5rem;
                     }
 
                     p {
+                        text-align: center;
                         font-size: 1.2rem;
                         color: $cor-secundaria;
                         font-weight: 400;
