--- a/_home.scss
+++ b/_home.scss
@@ -5,9 +5,36 @@
 main {
     max-width: 100vw;
 
+    #wpp-btn {
+        margin: 20px;
+        z-index: 999;
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        animation: wpp-btn 1s ease-in-out infinite;
+
+        &:hover {
+            animation: none;
+        }
+    }
+
+    @keyframes wpp-btn {
+        0% {
+            bottom: 0;
+        }
+
+        50% {
+            bottom: 30px;
+        }
+
+        100% {
+            bottom: 0;
+        }
+    }
+
     .carousel-container {
-        width: 80%;
-        margin: 30px auto;
+        width: 100%;
+        margin: 0px auto;
         overflow: hidden;
         position: relative;
 
@@ -90,7 +117,7 @@ main {
     }
 
     .carousel-slide img {
-        width: 80vw;
+        width: 100vw;
     }
 }
 
@@ -105,7 +132,7 @@ main {
 
         .carousel-container {
             width: 100%;
-            margin: 30px auto;
+            margin: 0px auto;
             overflow: hidden;
 
             &-btns {
@@ -199,7 +226,7 @@ main {
 
         .carousel-container {
             width: 100%;
-            margin: 30px auto;
+            margin: 0px auto;
             overflow: hidden;
 
             &-btns {
@@ -292,7 +319,7 @@ main {
 
         .carousel-container {
             width: 100%;
-            margin: 30px auto;
+            margin: 0px auto;
             overflow: hidden;
 
             &-btns {
