--- a/_thirdSection.scss
+++ b/_thirdSection.scss
@@ -2,7 +2,8 @@
     width: 100%;
     margin: 50px auto;
     padding: 50px 50px;
-    background-color: $cor-primaria;
+    background-image: url(assets/gold.jpg);
+    background-size: cover;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 
     .third__section-container {
@@ -30,7 +31,8 @@
         width: 100%;
         margin: 50px auto;
         padding: 50px 50px;
-        background-color: $cor-primaria;
+        background-image: url(assets/gold.jpg);
+        background-size: cover;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 
         .third__section-container {
