--- a/style.css
+++ b/style.css
@@ -89,6 +89,9 @@ main #wpp-btn {
 main #wpp-btn:hover {
   animation: none;
 }
+main #wpp-btn-mobile {
+  display: none;
+}
 @keyframes wpp-btn {
   0% {
     bottom: 0;
@@ -468,6 +471,24 @@ main .carousel-slide img {
   }
   main {
     max-width: 100vw;
+  }
+  main #wpp-btn {
+    display: none;
+  }
+  main #wpp-btn:hover {
+    animation: none;
+  }
+  main #wpp-btn-mobile {
+    display: flex;
+    margin: 20px;
+    z-index: 999;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    animation: wpp-btn 1s ease-in-out infinite;
+  }
+  main #wpp-btn-mobile:hover {
+    animation: none;
   }
   main .carousel-container {
     width: 100%;
