footer fix color

--- a/_mixins.scss
+++ b/_mixins.scss
@@ -307,7 +307,7 @@ $cor-cinza: #a7a7a7;
                     transition: .5s;
 
                     &:hover {
-                        color: $cor-secundaria;
+                        color: $cor-primaria;
                     }
                 }
             }
@@ -413,7 +413,7 @@ $cor-cinza: #a7a7a7;
                     transition: .5s;
 
                     &:hover {
-                        color: $cor-secundaria;
+                        color: $cor-primaria;
                     }
                 }
             }
