Commit versao final

--- a/_contato.scss
+++ b/_contato.scss
@@ -68,7 +68,8 @@
         height: 600px;
         display: flex;
         flex-direction: column;
-        background: url(assets/gold.jpg);
+        background-image: url(assets/bg\ form.png);
+        background-size: cover;
         background-size: cover;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         padding: 20px;
