--- a/_fifthSection.scss
+++ b/_fifthSection.scss
@@ -14,9 +14,10 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 50px;
 
         &-content {
-            width: 60%;
+            width: 70%;
             display: flex;
             flex-direction: column;
             gap: 20px;
