--- a/_simulacao.scss
+++ b/_simulacao.scss
@@ -6,7 +6,7 @@
         margin: 50px auto;
         display: flex;
         flex-direction: column;
-        background: url(assets/gold.jpg);
+        background-image: url(assets/bg\ form.png);
         background-size: cover;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         padding: 40px;
@@ -119,7 +119,8 @@
             margin: 50px auto;
             display: flex;
             flex-direction: column;
-            background: url(assets/gold.jpg);
+            background-image: url(assets/bg\ form.png);
+            background-size: cover;
             padding: 40px;
             border-radius: 20px;
             gap: 20px;
