--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 .header {
-  background: linear-gradient(to bottom, #000, #242424);
+  background: linear-gradient(to bottom, #3f3f3f, #242424);
   height: auto;
 }
 .header .info {
@@ -793,7 +793,7 @@ main .carousel-slide img {
   line-height: 25px;
   text-align: center;
   font-size: 1rem;
-  color: #a7a7a7;
+  color: #7e7e7e;
   font-weight: 400;
 }
 .first__section .first__section-container .content:hover {
@@ -856,7 +856,7 @@ main .carousel-slide img {
   }
   .first__section .first__section-container .content .produto p {
     font-size: 0.9rem;
-    color: #a7a7a7;
+    color: #7e7e7e;
     font-weight: 400;
   }
   .first__section .first__section-container .content:hover {
@@ -1188,9 +1188,10 @@ main .carousel-slide img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 50px;
 }
 .fifth__section-all-content {
-  width: 60%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -1320,7 +1321,7 @@ main .carousel-slide img {
 }
 #footer .footer__content .footer__logo p {
   margin-bottom: 20px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: #fff;
   font-weight: 400;
 }
@@ -1582,7 +1583,7 @@ main .carousel-slide img {
 }
 .servicos .servico p {
   font-size: 1rem;
-  color: #a7a7a7;
+  color: #7e7e7e;
   text-align: center;
 }
 .servicos .servico:hover {
@@ -1621,7 +1622,7 @@ main .carousel-slide img {
   }
   .servicos .servico p {
     font-size: 1rem;
-    color: #a7a7a7;
+    color: #7e7e7e;
     text-align: center;
   }
   .servicos .servico:hover {
@@ -1636,7 +1637,7 @@ main .carousel-slide img {
   margin: 50px auto;
   display: flex;
   flex-direction: column;
-  background: url(assets/gold.jpg);
+  background-image: url(assets/bg\ form.png);
   background-size: cover;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 40px;
@@ -1749,7 +1750,8 @@ main .carousel-slide img {
     margin: 50px auto;
     display: flex;
     flex-direction: column;
-    background: url(assets/gold.jpg);
+    background-image: url(assets/bg\ form.png);
+    background-size: cover;
     padding: 40px;
     border-radius: 20px;
     gap: 20px;
@@ -1912,7 +1914,8 @@ main .carousel-slide img {
   height: 600px;
   display: flex;
   flex-direction: column;
-  background: url(assets/gold.jpg);
+  background-image: url(assets/bg\ form.png);
+  background-size: cover;
   background-size: cover;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 20px;
